# Wristwatch-ESP32-C6

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
apps/time_settings/: CMakeLists.txt  time_settings.c  time_settings.h
components/XPowersLib/src/: XPowersLibInterface.cpp
components/bsp_extra/src/: bsp_board_extra.c
components/pilot_watchface/: CMakeLists.txt  pilot_watchface.c  pilot_watchface.h
components/simple_watchface/: CMakeLists.txt  simple_watchface.c  simple_watchface.h
main/: CMakeLists.txt  Spec_Analyzer.c  Spec_Analyzer.h  credentials_template.h  idf_component.yml  main.cpp  port_axp2101.cpp
